[package]
name = "fight_game"
version = "0.1.0"
authors = ["Kaneyuki Hiromasa <matsugen2511@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static= "1.4.0"
amethyst = {git = "https://github.com/amethyst/amethyst.git", features = ["vulkan"] }
amethyst-sprite-studio={path = "../amethyst-sprite-studio/"}
amethyst-aabb={path="../amethyst-aabb/"}
input-handle={path="../input-handle/"}
command-parser={path="../command-parser/"}
serde= "1.0.105"
log= "0.4.8"
failure= "0.1.7"
bitflags= "1.2.1"

thread_profiler={version="0.3.0", optional = true}
debug_system={path="../debug_system/", optional = true}

[features]
default=[]
serialize=[]
profiler=[
    "amethyst/profiler",
    "thread_profiler"
    ]
debug=["amethyst-aabb/debug", "debug_system"]
